--- a/Flicken.dproj
+++ b/Flicken.dproj
@@ -74,9 +74,7 @@
     </PropertyGroup>
     <PropertyGroup Condition="'$(Cfg_1_Win32)'!=''">
         <Icon_MainIcon>Resources\Icon.ico</Icon_MainIcon>
-        <VerInfo_Release>1</VerInfo_Release>
-        <VerInfo_Keys>CompanyName=;FileDescription=;FileVersion=0.0.1.0;InternalName=Flicken;LegalCopyright=Copyright @ 2014, poxitron;LegalTrademarks=;OriginalFilename=Flicken.exe;ProductName=Flicken;ProductVersion=0.0.1.0;Comments=</VerInfo_Keys>
-        <VerInfo_MajorVer>0</VerInfo_MajorVer>
+        <VerInfo_Keys>CompanyName=;FileDescription=;FileVersion=1.0.0.0;InternalName=Flicken;LegalCopyright=Copyright @ 2014, poxitron;LegalTrademarks=;OriginalFilename=Flicken.exe;ProductName=Flicken;ProductVersion=1.0.0.0;Comments=</VerInfo_Keys>
         <DCC_ExeOutput>C:\Users\poxitron\Desktop\$(Config)\Flicken</DCC_ExeOutput>
         <DCC_DcuOutput>C:\Users\poxitron\Desktop\$(Config)\Flicken\Unit</DCC_DcuOutput>
         <VerInfo_Locale>1033</VerInfo_Locale>
@@ -90,9 +88,8 @@
         <DCC_DebugInformation>0</DCC_DebugInformation>
     </PropertyGroup>
     <PropertyGroup Condition="'$(Cfg_2_Win32)'!=''">
-        <VerInfo_Keys>CompanyName=;FileDescription=;FileVersion=0.0.1.0;InternalName=Flicken;LegalCopyright=Copyright @ 2014, poxitron;LegalTrademarks=;OriginalFilename=Flicken.exe;ProductName=Flicken;ProductVersion=0.0.1.0;Comments=</VerInfo_Keys>
-        <VerInfo_MajorVer>0</VerInfo_MajorVer>
-        <VerInfo_Release>1</VerInfo_Release>
+        <Icon_MainIcon>Resources\Icon.ico</Icon_MainIcon>
+        <VerInfo_Keys>CompanyName=;FileDescription=;FileVersion=1.0.0.0;InternalName=Flicken;LegalCopyright=Copyright @ 2015, poxitron;LegalTrademarks=;OriginalFilename=Flicken.exe;ProductName=Flicken;ProductVersion=1.0.0.0;Comments=</VerInfo_Keys>
         <DCC_DcuOutput>C:\Users\poxitron\Desktop\$(Config)\Flicken\Unit</DCC_DcuOutput>
         <DCC_ExeOutput>C:\Users\poxitron\Desktop\$(Config)\Flicken</DCC_ExeOutput>
         <VerInfo_Locale>1033</VerInfo_Locale>
