--- a/Flicken.dproj
+++ b/Flicken.dproj
@@ -99,7 +99,7 @@
         <DelphiCompile Include="$(MainSource)">
             <MainSource>MainSource</MainSource>
         </DelphiCompile>
-        <DCCReference Include="frmFlicken.pas">
+        <DCCReference Include="frmMain.pas">
             <Form>Form2</Form>
         </DCCReference>
         <DCCReference Include="MyFunctions.pas"/>
